syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.data";

// 更新时间 : 2024-07-03
message Room {
    int64 id = 1;
    string id_str = 2;
    int64 status = 3;
    int64 owner_user_id = 4;
    string title = 5;
    int64 user_count = 6;
    int64 create_time = 7;
    int64 live_id = 14;
}
